Validation update
